# i3ds-cosine

./: CMakeLists.txt  petamake.sh
include/: basler_high_res_interface.hpp  basler_tof_interface.hpp  cosine_camera.hpp  cpp11_make_unique_template.hpp  ebus_camera_interface.hpp  ebus_wrapper.hpp  emulated_camera.hpp  gige_camera_interface.hpp  periodic_sampler.hpp  serial_communicator.hpp
src/: Basler_ToF_Interface  CMakeLists.txt  Espen_Grab  Espen_Grab.cpp  FirstSample.cpp  Makefile_Basler_HighRes  Makefile_Espen_Grab  Makefile_SerialCommunicator  Makefile_ToF  SerialCommunicator.cpp  basler_high_res_interface.cpp  basler_tof_interface.cpp  cosine-tir.cpp  cosine_camera.cpp  ebus_camera_interface.cpp  ebus_wrapper.cpp  emulated_camera.cpp  gige_camera_interface.cpp  i3ds_cosine_camera.cpp  i3ds_suite_cameras.cpp  i3ds_suite_emulator.cpp  periodic_sampler.cpp  serial_communicator.cpp  start_cosine.sh  start_pleora.sh
